--- a/gemelo_test.ipynb
+++ b/gemelo_test.ipynb
@@ -6,6 +6,7 @@
       "provenance": [],
       "collapsed_sections": [
         "aek43itA4pt8",
+        "lxNpLRr772_T",
         "Hc3pOm1pAmDi"
       ],
       "gpuType": "T4"
@@ -4490,7 +4491,7 @@
       "metadata": {
         "id": "_HgbPqtT8bjV"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4505,7 +4506,7 @@
         "id": "DEXvbXu66Fs2",
         "outputId": "a35b702f-827b-488c-d154-5833a6555115"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4528,7 +4529,7 @@
         "id": "BhTxj1y26tof",
         "outputId": "3f259f04-a94f-43d0-c44d-422a330506ca"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4556,7 +4557,7 @@
         "id": "rKzCzpiB647c",
         "outputId": "f76e026e-39dd-4137-8628-547e148286d3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4577,7 +4578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4626,7 +4627,7 @@
       "metadata": {
         "id": "UcapODViohVH"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4637,7 +4638,7 @@
       "metadata": {
         "id": "VorNDUvXonQF"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4652,7 +4653,7 @@
       "metadata": {
         "id": "V4qzSuLZ_Nzb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4688,7 +4689,7 @@
       "metadata": {
         "id": "_tilf0Qr8XDh"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4724,7 +4725,7 @@
       "metadata": {
         "id": "TWwY4saUF73E"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4737,7 +4738,7 @@
       "metadata": {
         "id": "NI1M1xUDE-tG"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4789,7 +4790,7 @@
       "metadata": {
         "id": "abrwdqq2A_zn"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4820,6 +4821,10 @@
         "    msg = \"\\nFace detected in the image? \" + (\"Yes\" if face else \"No\")\n",
         "    print(msg)\n",
         "\n",
+        "    if face is None:\n",
+        "      print(\"No face found. Done.\")\n",
+        "      return\n",
+        "\n",
         "    is_child = predict_child_from_face(image, face)\n",
         "    msg = \"Is there a child in the image? \" + (\"Yes\" if is_child else \"No\")\n",
         "    print(msg)\n",
@@ -4839,7 +4844,7 @@
         "id": "52qnFKt9JKvs",
         "outputId": "6ae0bfa5-fb5a-4fd1-87b3-42430c5d63a3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4889,6 +4894,10 @@
         "      msg = \"\\nFace detected in the image? \" + (\"Yes\" if face else \"No\")\n",
         "      print(msg)\n",
         "\n",
+        "      if face is None:\n",
+        "        print(\"continuing...\")\n",
+        "        continue\n",
+        "\n",
         "      is_child = predict_child_from_face(image, face)\n",
         "      msg = \"Is there a child in the image? \" + (\"Yes\" if is_child else \"No\")\n",
         "      print(msg)\n",
@@ -4908,7 +4917,7 @@
         "id": "LVUO4HQwHxnG",
         "outputId": "71e37cc6-d96c-49e2-b1a8-2568268ac7a0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4958,7 +4967,7 @@
         "id": "tSK8hk_YQF4A",
         "outputId": "d10d1a40-db3f-40b5-ff56-38191af08dcc"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5101,7 +5110,7 @@
         "id": "6fORRXGTQP-V",
         "outputId": "61327ce0-627d-4085-c6a3-9ea25bffb909"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5296,7 +5305,7 @@
         "id": "lhEWanY_TKax",
         "outputId": "cba62aa9-3e4b-4a27-daf6-b0e03b5b23c5"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5405,7 +5414,7 @@
       "metadata": {
         "id": "x0qUr2kEQYoQ"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5421,7 +5430,7 @@
       "metadata": {
         "id": "pIoWlXCYQwgn"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5437,7 +5446,7 @@
       "metadata": {
         "id": "cZ7mQc5wRACU"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5494,7 +5503,7 @@
         "id": "99hfBWaBQp3a",
         "outputId": "ce384ef1-1d1d-457e-adb8-90953a3f7c12"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
