--- a/gemelo_test.ipynb
+++ b/gemelo_test.ipynb
@@ -301,11 +301,11 @@
         "  # ROI of just the face\n",
         "  face_submat = image[startY:endY, startX:endX]\n",
         "  faceBlob = cv2.dnn.blobFromImage(\n",
-        "      face_submat,\n",
-        "      scaling_factor,\n",
-        "      cnn_default_size,\n",
-        "\t\t\trgb_mean_to_subtract,\n",
-        "\t\t\tswapRB=False\n",
+        "    face_submat,\n",
+        "    scaling_factor,\n",
+        "    cnn_default_size,\n",
+        "    rgb_mean_to_subtract,\n",
+        "    swapRB=False\n",
         "  )\n",
         "\n",
         "  # inference\n",
